--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <!-- For Android 9 (API level 28) and below -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" 
         android:maxSdkVersion="32" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:name=".SlurpApplication"
@@ -19,6 +21,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SLURP_v0"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDqQNqb83wqgv5Hb0XoZM9jsrlSmuxSSvA" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
